--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1810,6 +1810,159 @@ a {
 .cid-sw845iDnR3 .widget-icon {
   color: #303644;
 }
+.cid-swqjDCtAyi {
+  overflow: hidden;
+  padding-top: 135px;
+  padding-bottom: 0px;
+  background-color: #ebebec;
+}
+.cid-swqjDCtAyi .badge {
+  display: inline-block;
+  border-radius: 10rem;
+  padding: 8px 14px 6px 14px;
+  color: #303644;
+  background-color: rgba(132, 138, 189, 0.15);
+  margin-bottom: 26px;
+}
+.cid-swqjDCtAyi .badge.display-4 {
+  font-size: 11px;
+  line-height: 1.81;
+  letter-spacing: 0.5px;
+}
+.cid-swqjDCtAyi .mbr-section-subtitle {
+  color: #999999;
+  font-weight: 600;
+  margin-bottom: 21px;
+}
+.cid-swqjDCtAyi svg {
+  position: absolute;
+  bottom: 2rem;
+  left: 50%;
+  transform: translate(-50%) scale(2, 1.5);
+  overflow: hidden;
+  pointer-events: none;
+}
+.cid-swqjDCtAyi #e2_shape {
+  fill: #ffffff !important;
+}
+.cid-swqjDCtAyi .mbr-section-title {
+  text-align: left;
+  color: #404040;
+}
+.cid-swqjDCtAyi .mbr-section-title.display-1 {
+  font-size: 42px;
+  line-height: 1.214;
+  letter-spacing: 0px;
+}
+.cid-swqjDCtAyi .mbr-text {
+  color: #404040;
+  text-align: left;
+}
+.cid-swqjDCtAyi .mbr-text.display-5 {
+  font-size: 25px;
+  letter-spacing: 0px;
+  line-height: 1.36;
+}
+.cid-swqjDCtAyi .icon-wrap {
+  border-radius: 50%;
+  margin: auto;
+  text-align: left;
+  transition: all 0.3s;
+}
+.cid-swqjDCtAyi .mbr-media span {
+  font-size: 4rem;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  opacity: 0.9;
+  transition: all 0.25s;
+  color: #303644 !important;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.04) !important;
+}
+.cid-swqjDCtAyi .mbr-media span:hover {
+  opacity: 1;
+  color: #ff220c !important;
+  box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5) !important;
+  -webkit-box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5) !important;
+}
+.cid-swqjDCtAyi .mbr-media span.mbri-play:before {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-35%);
+  -moz-transform: translateX(-35%);
+  -ms-transform: translateX(-35%);
+  -o-transform: translateX(-35%);
+  transform: translateX(-35%);
+}
+.cid-swqjDCtAyi .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-swqjDCtAyi .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-swqjDCtAyi .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-swqjDCtAyi a.close {
+  position: absolute;
+  right: 4vw;
+  top: 4vh;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 37px;
+  background: #000;
+  padding: 20px;
+  border-radius: 50%;
+}
+.cid-swqjDCtAyi a.close:hover {
+  color: #ffffff;
+}
+.cid-swqjDCtAyi .play {
+  display: inline-block;
+  width: 52px;
+  height: 52px;
+  line-height: 3.5rem !important;
+  text-align: center;
+  border-radius: 100%;
+  background: #ffffff;
+  transition: all 200ms ease-in-out;
+  cursor: pointer;
+}
+.cid-swqjDCtAyi .play:before {
+  font-family: FontAwesome !important;
+  content: "\f04b";
+  font-size: 1rem;
+  padding: 0 0 0 2px;
+  display: block;
+}
+.cid-swqjDCtAyi .play-text {
+  margin-bottom: 0 !important;
+  padding-left: 10px;
+  display: inline-block;
+}
+.cid-swqjDCtAyi .play-text.display-4 {
+  font-size: 18px;
+  font-weight: 600;
+}
+@media (max-width: 992px) {
+  .cid-swqjDCtAyi svg {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .cid-swqjDCtAyi .show-modal {
+    margin-bottom: 20px;
+  }
+}
 .cid-swpYDqDvPz {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -1862,6 +2015,41 @@ a {
 }
 .cid-swpYDqDvPz .mbr-section-title {
   color: #303644;
+}
+.cid-swqii4lhXX {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #37858f;
+}
+.cid-swqii4lhXX .card-box {
+  padding: 0rem;
+}
+.cid-swqii4lhXX .mbr-section-btn {
+  margin-top: 1.8rem;
+}
+.cid-swqii4lhXX .card {
+  padding: 0;
+  margin: auto;
+}
+.cid-swqii4lhXX .card-img {
+  height: 400px;
+}
+.cid-swqii4lhXX .card-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cid-swqii4lhXX .card-wrapper {
+  padding: 2rem;
+  width: 100%;
+}
+@media (min-width: 1400px) {
+  .cid-swqii4lhXX .card-wrapper {
+    padding: 4rem;
+  }
+}
+.cid-swqii4lhXX .card-title {
+  color: #ffffff;
 }
 .cid-swq1pQsHFj {
   padding-top: 30px;
