--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1939,8 +1939,8 @@ a {
 }
 .cid-swqjDCtAyi .play:before {
   font-family: FontAwesome !important;
-  content: "\f04b";
-  font-size: 1rem;
+  content: "\f144";
+  font-size: 2rem;
   padding: 0 0 0 2px;
   display: block;
 }
