--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1810,13 +1810,13 @@ a {
 .cid-sw845iDnR3 .widget-icon {
   color: #303644;
 }
-.cid-swqjDCtAyi {
+.cid-swuyJcTs39 {
   overflow: hidden;
   padding-top: 135px;
   padding-bottom: 0px;
   background-image: url("../../../assets/images/section-1-image-2000x1129.jpg");
 }
-.cid-swqjDCtAyi .badge {
+.cid-swuyJcTs39 .badge {
   display: inline-block;
   border-radius: 10rem;
   padding: 8px 14px 6px 14px;
@@ -1824,17 +1824,17 @@ a {
   background-color: rgba(132, 138, 189, 0.15);
   margin-bottom: 26px;
 }
-.cid-swqjDCtAyi .badge.display-4 {
+.cid-swuyJcTs39 .badge.display-4 {
   font-size: 11px;
   line-height: 1.81;
   letter-spacing: 0.5px;
 }
-.cid-swqjDCtAyi .mbr-section-subtitle {
+.cid-swuyJcTs39 .mbr-section-subtitle {
   color: #999999;
   font-weight: 600;
   margin-bottom: 21px;
 }
-.cid-swqjDCtAyi svg {
+.cid-swuyJcTs39 svg {
   position: absolute;
   bottom: 2rem;
   left: 50%;
@@ -1842,35 +1842,35 @@ a {
   overflow: hidden;
   pointer-events: none;
 }
-.cid-swqjDCtAyi #e2_shape {
+.cid-swuyJcTs39 #e2_shape {
   fill: #ffffff !important;
 }
-.cid-swqjDCtAyi .mbr-section-title {
+.cid-swuyJcTs39 .mbr-section-title {
   text-align: left;
-  color: #404040;
+  color: #303644;
 }
-.cid-swqjDCtAyi .mbr-section-title.display-1 {
+.cid-swuyJcTs39 .mbr-section-title.display-1 {
   font-size: 42px;
   line-height: 1.214;
   letter-spacing: 0px;
 }
-.cid-swqjDCtAyi .mbr-text {
+.cid-swuyJcTs39 .mbr-text {
   color: #404040;
   text-align: left;
 }
-.cid-swqjDCtAyi .mbr-text.display-5 {
+.cid-swuyJcTs39 .mbr-text.display-5 {
   font-size: 25px;
   letter-spacing: 0px;
   line-height: 1.36;
 }
-.cid-swqjDCtAyi .icon-wrap {
+.cid-swuyJcTs39 .icon-wrap {
   border-radius: 50%;
   margin: auto;
   text-align: left;
   transition: all 0.3s;
 }
-.cid-swqjDCtAyi .mbr-media span {
-  font-size: 4rem;
+.cid-swuyJcTs39 .mbr-media span {
+  font-size: 1rem;
   cursor: pointer;
   position: relative;
   display: inline-block;
@@ -1879,13 +1879,13 @@ a {
   color: #303644 !important;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.04) !important;
 }
-.cid-swqjDCtAyi .mbr-media span:hover {
+.cid-swuyJcTs39 .mbr-media span:hover {
   opacity: 1;
   color: #ff220c !important;
   box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5) !important;
   -webkit-box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5) !important;
 }
-.cid-swqjDCtAyi .mbr-media span.mbri-play:before {
+.cid-swuyJcTs39 .mbr-media span.mbri-play:before {
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-35%);
@@ -1894,7 +1894,7 @@ a {
   -o-transform: translateX(-35%);
   transform: translateX(-35%);
 }
-.cid-swqjDCtAyi .modalWindow {
+.cid-swuyJcTs39 .modalWindow {
   position: fixed;
   z-index: 5000;
   left: 0;
@@ -1903,16 +1903,16 @@ a {
   width: 100%;
   height: 100%;
 }
-.cid-swqjDCtAyi .modalWindow .modalWindow-container {
+.cid-swuyJcTs39 .modalWindow .modalWindow-container {
   display: table-cell;
   vertical-align: middle;
 }
-.cid-swqjDCtAyi .modalWindow .modalWindow-video {
+.cid-swuyJcTs39 .modalWindow .modalWindow-video {
   height: calc(44.9943757vw);
   width: 80vw;
   margin: 0 auto;
 }
-.cid-swqjDCtAyi a.close {
+.cid-swuyJcTs39 a.close {
   position: absolute;
   right: 4vw;
   top: 4vh;
@@ -1923,10 +1923,10 @@ a {
   padding: 20px;
   border-radius: 50%;
 }
-.cid-swqjDCtAyi a.close:hover {
+.cid-swuyJcTs39 a.close:hover {
   color: #ffffff;
 }
-.cid-swqjDCtAyi .play {
+.cid-swuyJcTs39 .fa-play {
   display: inline-block;
   width: 52px;
   height: 52px;
@@ -1937,31 +1937,35 @@ a {
   transition: all 200ms ease-in-out;
   cursor: pointer;
 }
-.cid-swqjDCtAyi .play:before {
+.cid-swuyJcTs39 .fa-play:before {
   font-family: FontAwesome !important;
-  content: "\f144";
-  font-size: 2rem;
+  content: "\f04b";
+  font-size: 1.2rem;
   padding: 0 0 0 2px;
   display: block;
 }
-.cid-swqjDCtAyi .play-text {
+.cid-swuyJcTs39 .play-text {
   margin-bottom: 0 !important;
   padding-left: 10px;
   display: inline-block;
 }
-.cid-swqjDCtAyi .play-text.display-4 {
+.cid-swuyJcTs39 .play-text.display-4 {
   font-size: 18px;
   font-weight: 600;
 }
 @media (max-width: 992px) {
-  .cid-swqjDCtAyi svg {
+  .cid-swuyJcTs39 svg {
     display: none;
   }
 }
 @media (max-width: 768px) {
-  .cid-swqjDCtAyi .show-modal {
+  .cid-swuyJcTs39 .show-modal {
     margin-bottom: 20px;
   }
+}
+.cid-swuyJcTs39 .mbr-text,
+.cid-swuyJcTs39 .mbr-section-btn {
+  color: #303644;
 }
 .cid-swpYDqDvPz {
   padding-top: 2rem;
@@ -2031,6 +2035,7 @@ a {
 }
 .cid-swqii4lhXX .mbr-section-btn {
   margin-top: 1.8rem;
+  text-align: center;
 }
 .cid-swqii4lhXX .card {
   padding: 0;
@@ -2052,14 +2057,17 @@ a {
 }
 .cid-swqii4lhXX .card-wrapper:hover {
   background-color: #41ba7d;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  font-weight: 700;
 }
 @media (min-width: 1400px) {
   .cid-swqii4lhXX .card-wrapper {
-    padding: 4.6rem;
+    padding: 4.56rem 1rem 4.56rem 1rem;
   }
 }
 .cid-swqii4lhXX .card-title {
   color: #303644;
+  text-align: center;
 }
 @media (max-width: 767px) {
   .cid-swqii4lhXX .card-wrapper {
@@ -2549,6 +2557,7 @@ a {
 .cid-swq9Bd5Yff .theme {
   color: #ffffff;
   font-size: 80%;
+  text-align: center;
 }
 .cid-swq9Bd5Yff .copyright > p {
   color: #ff3366;
