--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6329,15 +6329,14 @@ a {
   }
   .cid-swZlQVOuLr .embed-responsive {
     position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
+    height: 726px !important;
   }
   .cid-swZlQVOuLr .embed-responsive-item {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 726px !important;
+    height: 100%;
     border: 0;
   }
 }
