--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11394,7 +11394,7 @@ a {
 .cid-sx47TIuxh1 {
   padding-top: 60px;
   padding-bottom: 180px;
-  background-color: #ffffff;
+  background-color: #ebebec;
 }
 .cid-sx47TIuxh1 .container {
   width: 100%;
