--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -99,7 +99,7 @@ body {
   border-radius: 4px;
 }
 .bg-primary {
-  background-color: #303644 !important;
+  background-color: #41ba7d !important;
 }
 .bg-success {
   background-color: #37858f !important;
@@ -115,8 +115,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #303644 !important;
-  border-color: #303644 !important;
+  background-color: #41ba7d !important;
+  border-color: #41ba7d !important;
   color: #ffffff !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
 }
@@ -125,15 +125,15 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff !important;
-  background-color: #0c0e11 !important;
-  border-color: #0c0e11 !important;
+  background-color: #2b7a52 !important;
+  border-color: #2b7a52 !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #0c0e11 !important;
-  border-color: #0c0e11 !important;
+  background-color: #2b7a52 !important;
+  border-color: #2b7a52 !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -292,23 +292,23 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background-color: transparent !important;
-  border-color: #303644;
-  color: #303644;
+  border-color: #41ba7d;
+  color: #41ba7d;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #0c0e11 !important;
+  color: #2b7a52 !important;
   background-color: transparent!important;
-  border-color: #0c0e11 !important;
+  border-color: #2b7a52 !important;
   box-shadow: none!important;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #303644 !important;
-  border-color: #303644 !important;
+  background-color: #41ba7d !important;
+  border-color: #41ba7d !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -458,7 +458,7 @@ body {
   border-color: #fafafa !important;
 }
 .text-primary {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .text-secondary {
   color: #41ba7d !important;
@@ -484,7 +484,7 @@ body {
 a.text-primary:hover,
 a.text-primary:focus,
 a.text-primary.active {
-  color: #060708 !important;
+  color: #276e4a !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus,
@@ -535,7 +535,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-position: 0px 1.2em;
 }
 .nav-tabs .nav-link.active {
-  color: #303644;
+  color: #41ba7d;
 }
 .nav-tabs .nav-link:not(.active) {
   color: #232323;
@@ -553,8 +553,8 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #303644;
-  border-color: #303644;
+  background-color: #41ba7d;
+  border-color: #41ba7d;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -562,11 +562,11 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
 }
 a,
 a:hover {
-  color: #303644;
+  color: #41ba7d;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #9fa7bb;
+  color: #9eddbd;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -600,7 +600,7 @@ a:hover {
 .form-control:hover,
 .form-control:focus {
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px 0px, rgba(0, 0, 0, 0.07) 0px 1px 3px 0px, rgba(0, 0, 0, 0.03) 0px 0px 0px 1px;
-  border-color: #303644 !important;
+  border-color: #41ba7d !important;
 }
 .form-control:-webkit-input-placeholder {
   font-family: 'AdonisC Regular';
@@ -612,19 +612,19 @@ a:hover {
   font-size: 1.375rem;
 }
 blockquote {
-  border-color: #303644;
+  border-color: #41ba7d;
 }
 /* Forms */
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #303644;
+  background-color: #41ba7d;
   color: #ffffff;
 }
 .jq-number__spin {
   transition: 0.25s ease;
 }
 .jq-number__spin:hover {
-  border-color: #303644;
+  border-color: #41ba7d;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:after,
@@ -636,14 +636,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #303644;
-  border-bottom-color: #303644;
+  border-top-color: #41ba7d;
+  border-bottom-color: #41ba7d;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
-  color: #ffffff !important;
-  background-color: #303644 !important;
+  color: #000000 !important;
+  background-color: #41ba7d !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -674,7 +674,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23303644' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%2341ba7d' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.5;
@@ -730,7 +730,7 @@ a {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 .cid-svXyHlu4Vm .card_wrapper:hover .card_title a {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-svXyHlu4Vm .card_wrapper:hover .card_title,
 .cid-svXyHlu4Vm .card_wrapper:hover .icon_block {
@@ -743,7 +743,7 @@ a {
   color: #303644 !important;
 }
 .cid-svXyHlu4Vm .card_wrapper:hover .card_link .mbr-iconfont {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-svXyHlu4Vm .card_wrapper:hover .shape {
   opacity: 1;
@@ -1177,7 +1177,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -1691,7 +1691,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -1820,7 +1820,7 @@ a {
   display: inline-block;
   border-radius: 10rem;
   padding: 8px 14px 6px 14px;
-  color: #303644;
+  color: #41ba7d;
   background-color: rgba(132, 138, 189, 0.15);
   margin-bottom: 26px;
 }
@@ -2146,7 +2146,7 @@ a {
 .cid-swq1pQsHFj .btn-black-outline:hover,
 .cid-swq1pQsHFj .btn-white-outline:hover {
   background-color: transparent!important;
-  color: #303644 !important;
+  color: #41ba7d !important;
   box-shadow: none!important;
 }
 .cid-swq1pQsHFj .btn-primary-outline:active,
@@ -2200,10 +2200,10 @@ a {
   padding-top: 14px;
 }
 .cid-swq1pQsHFj .link-wrap:hover {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-swq1pQsHFj .link-wrap:hover:hover .link-ico {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-swq1pQsHFj .line {
   width: 150%;
@@ -2316,7 +2316,7 @@ a {
 .cid-swq1qAqXoe .btn-black-outline:hover,
 .cid-swq1qAqXoe .btn-white-outline:hover {
   background-color: transparent!important;
-  color: #303644 !important;
+  color: #41ba7d !important;
   box-shadow: none!important;
 }
 .cid-swq1qAqXoe .btn-primary-outline:active,
@@ -2370,10 +2370,10 @@ a {
   padding-top: 14px;
 }
 .cid-swq1qAqXoe .link-wrap:hover {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-swq1qAqXoe .link-wrap:hover:hover .link-ico {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-swq1qAqXoe .line {
   width: 150%;
@@ -2506,7 +2506,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-swq9Bd5Yff .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-swq9Bd5Yff .item {
   display: flex;
@@ -2746,7 +2746,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -3260,7 +3260,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -3539,8 +3539,8 @@ a {
   border-color: #fff;
 }
 .cid-swAC1GKTW1 .btn-b:hover {
-  border-color: #303644;
-  background-color: #303644;
+  border-color: #41ba7d;
+  background-color: #41ba7d;
 }
 .cid-swAC1GKTW1 .btn-w {
   color: #fff;
@@ -3552,8 +3552,8 @@ a {
   margin-bottom: 3px;
 }
 .cid-swAC1GKTW1 .btn-w:hover {
-  border-color: #303644;
-  background-color: #303644;
+  border-color: #41ba7d;
+  background-color: #41ba7d;
 }
 .cid-swAC1GKTW1 .item {
   margin-bottom: 2em;
@@ -3835,7 +3835,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9JFRosW6 .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9JFRosW6 .item {
   display: flex;
@@ -4075,7 +4075,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -4589,7 +4589,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -5450,7 +5450,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9JygzSmD .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9JygzSmD .item {
   display: flex;
@@ -5690,7 +5690,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -6204,7 +6204,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -6326,7 +6326,7 @@ a {
 .cid-swZlQVOuLr {
   padding-top: 175px;
   padding-bottom: 40px;
-  background-color: #303644;
+  background-color: #41ba7d;
 }
 @media (max-width: 991px) {
   .cid-swZlQVOuLr {
@@ -6490,7 +6490,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9J9XO3Mc .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9J9XO3Mc .item {
   display: flex;
@@ -6730,7 +6730,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -7244,7 +7244,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -7531,7 +7531,7 @@ a {
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  background-color: #303644;
+  background-color: #41ba7d;
 }
 .cid-swZMFld1fe span {
   font-size: 2rem;
@@ -7716,7 +7716,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9J3YixqQ .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9J3YixqQ .item {
   display: flex;
@@ -7956,7 +7956,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -8470,7 +8470,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -9134,7 +9134,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9IYL2BFl .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9IYL2BFl .item {
   display: flex;
@@ -9374,7 +9374,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -9888,7 +9888,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -10153,10 +10153,10 @@ a {
   display: none;
 }
 .cid-sx42MzJkOr .btn-primary {
-  border: 1px solid #303644 !important;
+  border: 1px solid #41ba7d !important;
 }
 .cid-sx42MzJkOr .btn-primary:hover {
-  border: 1px solid #303644 !important;
+  border: 1px solid #41ba7d !important;
 }
 .cid-sx42MzJkOr .stripe {
   border-bottom: 1px solid #37858f;
@@ -10428,7 +10428,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9IRIoGMX .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9IRIoGMX .item {
   display: flex;
@@ -10668,7 +10668,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -11182,7 +11182,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -11391,13 +11391,24 @@ a {
   color: #ffffff;
   text-align: right;
 }
-.cid-sx47TIuxh1 {
-  padding-top: 60px;
-  padding-bottom: 180px;
-  background-color: #ebebec;
+.cid-sxahBsblIM {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #41ba7d;
 }
-.cid-sx47TIuxh1 .container {
-  width: 100%;
+@media (max-width: 991px) {
+  .cid-sxahBsblIM .embed-responsive {
+    position: relative;
+    height: 2200px !important;
+  }
+  .cid-sxahBsblIM .embed-responsive-item {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
 }
 .cid-sx9IGimM6G {
   padding-top: 150px;
@@ -11489,7 +11500,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9IGimM6G .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9IGimM6G .item {
   display: flex;
@@ -11729,7 +11740,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -12243,7 +12254,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -12547,7 +12558,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9ILrWvdS .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9ILrWvdS .item {
   display: flex;
@@ -12787,7 +12798,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sw845iDnR3 .navbar-nav .main-menu-animated-line.bottom {
@@ -13301,7 +13312,7 @@ a {
 }
 .cid-sw845iDnR3 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -13691,7 +13702,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9KxcCbps .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9KxcCbps .item {
   display: flex;
@@ -13931,7 +13942,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sx5qe2Jqt2 .navbar-nav .main-menu-animated-line.bottom {
@@ -14445,7 +14456,7 @@ a {
 }
 .cid-sx5qe2Jqt2 .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -14835,7 +14846,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9KqAZeFg .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9KqAZeFg .item {
   display: flex;
@@ -15075,7 +15086,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sx9vmmzceM .navbar-nav .main-menu-animated-line.bottom {
@@ -15589,7 +15600,7 @@ a {
 }
 .cid-sx9vmmzceM .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -15983,7 +15994,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9KfZReA4 .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9KfZReA4 .item {
   display: flex;
@@ -16223,7 +16234,7 @@ a {
     width: 0;
     height: 0;
     z-index: 100;
-    border-top: 4px solid #303644;
+    border-top: 4px solid #41ba7d;
     transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
   }
   .cid-sx9AgkPkPm .navbar-nav .main-menu-animated-line.bottom {
@@ -16737,7 +16748,7 @@ a {
 }
 .cid-sx9AgkPkPm .icons-menu .mbr-iconfont {
   font-size: 1rem;
-  color: #303644;
+  color: #41ba7d;
   display: inline-flex;
   background-color: #41ba7d;
   border-radius: 100%;
@@ -17181,7 +17192,7 @@ a {
   font-size: 1.4rem;
 }
 .cid-sx9K5EVwGd .soc-item:hover span {
-  color: #303644 !important;
+  color: #41ba7d !important;
 }
 .cid-sx9K5EVwGd .item {
   display: flex;
